Fix linting error